Add the Zen of Ansible to the structures section (#2)
* Create guiding_principles.adoc

* Rename guiding_principles.adoc to README.adoc

* Added guidance to the top level readme

* Update README.adoc

* Update README.adoc

* updated to link

Co-authored-by: Eric L. <ericzolf@users.noreply.github.com>

* Relocated zen of ansible to structures

---------

Co-authored-by: Eric L. <ericzolf@users.noreply.github.com>

--- a/README.adoc
+++ b/README.adoc
@@ -57,3 +57,5 @@ include::inventories/README.adoc[leveloffset=1]
 include::plugins/README.adoc[leveloffset=1]
 
 include::coding_style/README.adoc[leveloffset=1]
+
+include::guidance/README.adoc[leveloffset=1]
